--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="?colorToolbar" />
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:id="@+id/nav_host_fragment"
                 android:layout_width="match_parent"
